add bootstrap classpath